# tauri-yew-demo

./: .gitignore  LICENSE  README.md
frontend/: Cargo.toml
frontend/public/: glue.js  main.css
frontend/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
